--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "main": "server.js",
+    "dependencies": {
+    "app": "^0.1.0",
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "port": "^0.8.1",
+    "server": "^1.0.0-alpha.16"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
